Fixed text align of buttons (#33217)

--- a/extensions/amp-story-interactive/0.1/amp-story-interactive-quiz.css
+++ b/extensions/amp-story-interactive/0.1/amp-story-interactive-quiz.css
@@ -58,6 +58,7 @@
   z-index: 0 !important;
   border: none !important;
   outline: none !important;
+  text-align: start !important;
 }
 
 [dir='rtl'] .i-amphtml-story-interactive-quiz-option {
